@@ -120,7 +120,7 @@ public class UtilMethods {
 
     private static final java.text.SimpleDateFormat DATE_TO_PRETTY_HTML_DATE = new java.text.SimpleDateFormat("EEE, MMMM d yyyy");
 
-    private static final java.util.Map<String, String> _CC_MAPPINGS = new HashMap<String, String>();
+    private static final java.util.Map<String, String> _CC_MAPPINGS = new HashMap<>();
 
     private static final java.text.SimpleDateFormat PIDMS_TEXT_TO_DATE = new java.text.SimpleDateFormat("yyyy/MM/dd h:mm a");
 
@@ -320,6 +320,29 @@ public class UtilMethods {
         }
 
         return (x.length() > 0);
+
+    }
+
+    /**
+     * Can be used to run isSet on nested objects and
+     * lets you voliate the Law of Demeter with impunity, e.g.
+     * UtilMethods.isSet(contentlet.getContentType().fieldMap().get("fieldVar"))
+     * Created to appease the sonarqube cyclic complexity gods.
+     * @param supplier
+     * @return
+     */
+    public static final boolean isSet(final Supplier<?> supplier) {
+        try {
+            Object obj=supplier.get();
+
+            return obj instanceof String ? isSet((String)obj) : isSet(obj);
+        }
+        catch(NullPointerException e) {
+            return false;
+        }
+    }
+    public static final boolean isEmpty(final Supplier<?> supplier) {
+        return !isSet(supplier);
 
     }
 
@@ -1038,7 +1061,7 @@ public class UtilMethods {
 
     public static java.util.List getTimeList(int start, int duration) {
         java.util.Calendar cal = new java.util.GregorianCalendar();
-        List<String> out = new ArrayList<String>();
+        List<String> out = new ArrayList<>();
         cal.set(java.util.Calendar.HOUR, start);
         cal.set(java.util.Calendar.MINUTE, 0);
 
@@ -1239,7 +1262,7 @@ public class UtilMethods {
     }
 
     public static String prettyByteify(long memory) {
-    	Double x = new Double(memory);
+    	Double x = Double.valueOf(memory);
     	NumberFormat nf = new DecimalFormat("#.0");
         String myBytes = null;
         if (x > (1024 * 1024 * 1024)) {
@@ -1715,7 +1738,7 @@ public class UtilMethods {
         StringBuffer sb = new StringBuffer();
 
         if (daysOfWeek == null) {
-            daysOfWeek = new HashMap<String, String>();
+            daysOfWeek = new HashMap<>();
             daysOfWeek.put("M", "Monday");
             daysOfWeek.put("T", "Tuesday");
             daysOfWeek.put("W", "Wednesday");
@@ -1821,7 +1844,7 @@ public class UtilMethods {
      */
     public static String[] specialSplit(String text, String delim, String textQualifier) throws IOException {
 
-        ArrayList<String> tokens = new ArrayList<String>();
+        ArrayList<String> tokens = new ArrayList<>();
         StringTokenizer tok = new StringTokenizer(text, delim, true);
         boolean delimFound = false;
         String lastToken = "";
@@ -2080,7 +2103,7 @@ public class UtilMethods {
      * @throws IOException
      */
     public static List<String[]> specialSplit(Reader reader, char delim, char textQualifier) throws IOException {
-		List<String[]> records = new ArrayList<String[]>();
+		List<String[]> records = new ArrayList<>();
 		CsvReader csvReader = new CsvReader (reader);
 		csvReader.setDelimiter(delim);
 		csvReader.setTextQualifier(textQualifier);
@@ -2359,7 +2382,7 @@ public class UtilMethods {
     }
 
     public static List<Object> randomList(List<Object> list, int number) {
-    	List<Object> randomList = new ArrayList<Object>();
+    	List<Object> randomList = new ArrayList<>();
 
     	if(list.size() > 0) {
 	    	int done = 0;
@@ -2409,7 +2432,7 @@ public class UtilMethods {
      */
     public static Map<String, Object> toMap(Object obj) {
 
-        HashMap<String, Object> map = new HashMap<String, Object>();
+        HashMap<String, Object> map = new HashMap<>();
 
         // Getting object properties
         PropertyDescriptor[] descs = PropertyUtils.getPropertyDescriptors(obj);
@@ -3270,24 +3293,24 @@ public class UtilMethods {
     public static Number multiply(Number num1, Number num2) {
         Number product = null;
         if (num1 instanceof Double || num2 instanceof Double) {
-            product = new Double(((num1 instanceof Double) ? ((Double) num1).doubleValue() : (num1 instanceof Float) ? ((Float) num1).floatValue()
-                    : (num1 instanceof Long) ? ((Long) num1).longValue() : (num1 instanceof Integer) ? ((Integer) num1).intValue() : -1)
-                    * ((num2 instanceof Double) ? ((Double) num2).doubleValue() : (num2 instanceof Float) ? ((Float) num2).floatValue()
-                            : (num2 instanceof Long) ? ((Long) num2).longValue() : (num2 instanceof Integer) ? ((Integer) num2).intValue() : -1));
+            product = Double.valueOf(((num1 instanceof Double) ? ((Double)num1).doubleValue() : (num1 instanceof Float) ? ((Float)num1).floatValue()
+                    : (num1 instanceof Long) ? ((Long)num1).longValue() : (num1 instanceof Integer) ? ((Integer)num1).intValue() : -1)
+                    * ((num2 instanceof Double) ? ((Double)num2).doubleValue() : (num2 instanceof Float) ? ((Float)num2).floatValue()
+                    : (num2 instanceof Long) ? ((Long)num2).longValue() : (num2 instanceof Integer) ? ((Integer)num2).intValue() : -1));
 
         } else if (num1 instanceof Float || num2 instanceof Float) {
-            product = new Float(((num1 instanceof Float) ? ((Float) num1).floatValue() : (num1 instanceof Long) ? ((Long) num1).longValue()
-                    : (num1 instanceof Integer) ? ((Integer) num1).intValue() : -1)
-                    * ((num2 instanceof Float) ? ((Float) num2).floatValue() : (num2 instanceof Long) ? ((Long) num2).longValue()
-                            : (num2 instanceof Integer) ? ((Integer) num2).intValue() : -1));
+            product = Float.valueOf(((num1 instanceof Float) ? ((Float)num1).floatValue() : (num1 instanceof Long) ? ((Long)num1).longValue()
+                    : (num1 instanceof Integer) ? ((Integer)num1).intValue() : -1)
+                    * ((num2 instanceof Float) ? ((Float)num2).floatValue() : (num2 instanceof Long) ? ((Long)num2).longValue()
+                    : (num2 instanceof Integer) ? ((Integer)num2).intValue() : -1));
 
         } else if (num1 instanceof Long || num2 instanceof Long) {
-            product = new Long(((num1 instanceof Long) ? ((Long) num1).longValue() : (num1 instanceof Integer) ? ((Integer) num1).intValue() : -1)
-                    * ((num2 instanceof Long) ? ((Long) num2).longValue() : (num2 instanceof Integer) ? ((Integer) num2).intValue() : -1));
+            product = Long.valueOf(((num1 instanceof Long) ? ((Long)num1).longValue() : (num1 instanceof Integer) ? ((Integer)num1).intValue() : -1)
+                    * ((num2 instanceof Long) ? ((Long)num2).longValue() : (num2 instanceof Integer) ? ((Integer)num2).intValue() : -1));
 
         } else if (num1 instanceof Integer || num2 instanceof Integer) {
-            product = new Integer(((num1 instanceof Integer) ? ((Integer) num1).intValue() : -1)
-                    * ((num2 instanceof Integer) ? ((Integer) num2).intValue() : -1));
+            product = Integer.valueOf(((num1 instanceof Integer) ? ((Integer)num1).intValue() : -1)
+                    * ((num2 instanceof Integer) ? ((Integer)num2).intValue() : -1));
 
         }
         return product;
@@ -3330,7 +3353,7 @@ public class UtilMethods {
 
     @SuppressWarnings("unchecked")
     public static <T, E> HashMap<T, E> convertListToHashMap(List<E> arli, String methodToInvoke, Class T) throws Exception {
-        HashMap<T, E> hashi = new HashMap<T, E>();
+        HashMap<T, E> hashi = new HashMap<>();
         for (E e : arli) {
             Method m = e.getClass().getMethod(methodToInvoke);
             if (m.getReturnType() != T) {
@@ -3467,7 +3490,7 @@ public class UtilMethods {
     }
     
     public static Map<String,Object> getParameterMap(HttpServletRequest req) {
-        Map<String,Object> map=new HashMap<String,Object>();
+        Map<String,Object> map=new HashMap<>();
         Enumeration<String> names = req.getParameterNames();
         while(names.hasMoreElements()) {
             String ee=names.nextElement();
